--- a/notebooks/scm_matrix_form.ipynb
+++ b/notebooks/scm_matrix_form.ipynb
@@ -105,7 +105,7 @@
         "id": "Nvh9pI1xGmK7"
       },
       "source": [
-        "### Systems of Linera Equations"
+        "### Systems of Linear Equations"
       ]
     },
     {
@@ -537,7 +537,7 @@
         "We can laverage the assumptions on the noise terms to build the adjacency matrix $\\mathbf{A}$, specifically:\n",
         "\n",
         "1. An endogenous variable cannot be parent of an exogenous variable, i.e. $(V \\rightarrow U) \\notin \\mathbf{E}, \\, \\forall \\, (V, U) \\in \\mathbf{V} \\times \\mathbf{U}$,\n",
-        "2. The exegenous variables are independentof each other, i.e. $(U_i \\rightarrow U_j) \\notin \\mathbf{E}, \\, \\forall \\, (U_i, U_j) \\in \\mathbf{U} \\times \\mathbf{U}$."
+        "2. The exegenous variables are independent of each other, i.e. $(U_i \\rightarrow U_j) \\notin \\mathbf{E}, \\, \\forall \\, (U_i, U_j) \\in \\mathbf{U} \\times \\mathbf{U}$."
       ]
     },
     {
@@ -1313,7 +1313,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Computing $\\mathbf{B}(\\hat{\\theta})$ and $\\pmb{\\Gamma}(\\hat{\\theta})$ only require to **assign** the estimated parameters $\\hat{\\theta}$ to non-zero entrie:"
+        "Computing $\\mathbf{B}(\\hat{\\theta})$ and $\\pmb{\\Gamma}(\\hat{\\theta})$ only require to **assign** the estimated parameters $\\hat{\\theta}$ to non-zero entries:"
       ],
       "metadata": {
         "id": "3zemx-jU6CFh"
