Update formal explanation of estimation process

--- a/notebooks/potential_outcomes.ipynb
+++ b/notebooks/potential_outcomes.ipynb
@@ -95,7 +95,7 @@
           "height": 516
         },
         "id": "xNmqS2mBYz21",
-        "outputId": "df009650-4959-4979-b151-4e002702ff77"
+        "outputId": "8246b959-2135-41b5-ff00-457431064f19"
       },
       "outputs": [
         {
@@ -167,7 +167,7 @@
           "height": 300
         },
         "id": "rPEsqs-pYz23",
-        "outputId": "e946f568-8117-486f-d901-3d84f2d76c3c"
+        "outputId": "54d9e914-49ed-47a3-fc5b-e81229cc8220"
       },
       "outputs": [
         {
@@ -186,7 +186,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6b7c65c5-ca88-4b6f-a2fa-281c4f376e74\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ec4918c3-dfd9-4087-a910-c32d8efabcaa\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -274,7 +274,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6b7c65c5-ca88-4b6f-a2fa-281c4f376e74')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ec4918c3-dfd9-4087-a910-c32d8efabcaa')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -326,12 +326,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6b7c65c5-ca88-4b6f-a2fa-281c4f376e74 button.colab-df-convert');\n",
+              "        document.querySelector('#df-ec4918c3-dfd9-4087-a910-c32d8efabcaa button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6b7c65c5-ca88-4b6f-a2fa-281c4f376e74');\n",
+              "        const element = document.querySelector('#df-ec4918c3-dfd9-4087-a910-c32d8efabcaa');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -351,8 +351,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-37746c98-83cb-4cef-9a12-e085b55a7c7a\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-37746c98-83cb-4cef-9a12-e085b55a7c7a')\"\n",
+              "<div id=\"df-0169bbef-73f5-4a55-a992-cda124f225e5\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0169bbef-73f5-4a55-a992-cda124f225e5')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -471,7 +471,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-37746c98-83cb-4cef-9a12-e085b55a7c7a button');\n",
+              "        document.querySelector('#df-0169bbef-73f5-4a55-a992-cda124f225e5 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -501,11 +501,29 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "The average causal effect (ACE), also called average treatment effect (ATE), from $X$ to $Y$ is defined as:"
+      ],
+      "metadata": {
+        "id": "g8TXqWER6SDj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$ \\tau = \\mathbb{E}[Y(1) - Y(0)]$$"
+      ],
+      "metadata": {
+        "id": "H88auuM26SYv"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "8a9IBScyYz24"
       },
       "source": [
-        "Assuming consistency, no interference, positivity and unconfoundedness, the average causal effect (ACE) is defined as:"
+        "Assuming SUTVA, positivity and unconfoundedness, the ACE can be identified by the use of the **adjustment formula** and a valid adjustment set $\\mathbf{Z}$:"
       ]
     },
     {
@@ -514,8 +532,44 @@
         "id": "Vdqj6ip7Yz24"
       },
       "source": [
-        "$\\tau = \\mathbb{E}[Y(1) - Y(0)] = \\mathbb{E}_\\textbf{Z}[\\mathbb{E}[Y(1) - Y(0)|\\textbf{Z}]] = \\mathbb{E}_\\textbf{Z}[\\mathbb{E}[Y|X=1,\\textbf{Z}] - \\mathbb{E}[Y|X=0,\\textbf{Z}]]$"
+        "$$ \\tau = \\mathbb{E}[Y(1) - Y(0)] = \\mathbb{E}_\\textbf{Z}[\\mathbb{E}[Y(1) - Y(0)|\\textbf{Z}]] = \\mathbb{E}_\\textbf{Z}[\\mathbb{E}[Y|X=1,\\textbf{Z}] - \\mathbb{E}[Y|X=0,\\textbf{Z}]] $$"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Remember how the expected value of a discrete random variable $Z$ is defined:"
+      ],
+      "metadata": {
+        "id": "9oJ2xAlK1uAs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$ \\mathbb{E}[Z] = \\sum_{\\text{Dom}(Z)} z P(z) $$"
+      ],
+      "metadata": {
+        "id": "oDlHXsbE2Dms"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now, let's indicate $n$ the size of the data set and $n_z$ the raw frequency of a level $z \\in \\text{Dom}(Z)$ into the data. We can then estimate $\\mathbb{E}[Z]$ from data by simply use these frequencies:"
+      ],
+      "metadata": {
+        "id": "0K4b9-Xa3o8y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$ \\mathbb{E}[Z] = \\sum_{\\text{Dom}(Z)} z P(z) \\approx \\sum_{\\text{Dom}(Z)} z \\frac{n_z}{n} = \\frac{1}{n}\\sum_{\\text{Dom}(Z)}z n_z = \\frac{1}{n} \\sum_{i=1}^n z_i $$"
+      ],
+      "metadata": {
+        "id": "kpH8KHI03zss"
+      }
     },
     {
       "cell_type": "markdown",
@@ -523,7 +577,7 @@
         "id": "1QJffja1Yz25"
       },
       "source": [
-        "Replacing expectations with empirical mean:"
+        "We are finally able to give $\\tau$ an estimation through our data, that is replacing $\\mathbb{E}_{\\mathbf{Z}}[\\cdots]$ with the empirical mean:"
       ]
     },
     {
@@ -532,7 +586,7 @@
         "id": "y5-uIG1oYz25"
       },
       "source": [
-        "$\\hat{\\tau} = \\frac{1}{n} \\sum_{i=1}^{n} [\\mathbb{E}[Y|X=1,\\textbf{Z}=\\mathbf{z_{i}}] - \\mathbb{E}[Y|X=0,\\textbf{Z}=\\mathbf{z_{i}}]]$"
+        "$$ \\hat{\\tau} = \\frac{1}{n} \\sum_{i=1}^{n} [\\mathbb{E}[Y|X=1,\\textbf{Z}=\\mathbf{z_{i}}] - \\mathbb{E}[Y|X=0,\\textbf{Z}=\\mathbf{z_{i}}]] $$"
       ]
     },
     {
@@ -546,7 +600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "RMBO76UGYz25"
       },
@@ -585,7 +639,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "ctDxf_S0Yz26"
       },
@@ -617,7 +671,7 @@
         "id": "VTe46IpaM-rB",
         "outputId": "8fc498f8-7aa8-417e-e7ea-2fc05504acfa"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -645,7 +699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -685,7 +739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -717,7 +771,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "So AGE is a valid adjustement set. Note that the relative error is not 0 even in this case, because of the noise into the system."
+        "So {AGE} is a valid adjustment set. Note that the relative error is not 0 even in this case, because of the noise into the system."
       ],
       "metadata": {
         "id": "T5HlrobeUO6B"
@@ -726,7 +780,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Adjustement in graphical terms"
+        "## Adjustment in graphical terms"
       ],
       "metadata": {
         "id": "sJW-6a1COdk_"
@@ -790,7 +844,7 @@
         "id": "Aset9PF3NYGu",
         "outputId": "d9f62c2b-7791-4195-fa0e-918bbffc5f38"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -900,7 +954,7 @@
         "id": "XGYwZNlENYZ7",
         "outputId": "88de2ec7-1edc-4ec5-ffc7-13d6c92f1818"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
