--- a/notebooks/structural_causal_models.ipynb
+++ b/notebooks/structural_causal_models.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "GPXOW8nctecx"
       },
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "HgH3yxoLtec0"
       },
@@ -83,14 +83,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 406
         },
         "id": "7eoQjLNitec3",
-        "outputId": "7a5b84e1-2947-412b-b8e4-bf602c8c07b7"
+        "outputId": "4486193d-def8-4f77-a142-3cd458e392c7"
       },
       "outputs": [
         {
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "XYr4nsOCtec5"
       },
@@ -164,10 +164,13 @@
       "source": [
         "Indeed, each line in this sampling function is a **structural equation** related to the **causal graph**:\n",
         "\n",
-        "- $AGE := f_{AGE}(U_{AGE}) := \\mathcal{N}(65, 5) = 65 + \\sqrt{5}\\mathcal{N}(0, 1)$,\n",
-        "- $SOD := f_{SOD}(AGE, U_{SOD}) := I[(0.056 \\cdot AGE + \\mathcal{N}(0, 1)) > 3.50]$,\n",
-        "- $SBP := f_{SBP}(AGE, SOD, U_{SBP}) := 1.05 \\cdot SOD + 2.00 \\cdot AGE + \\mathcal{N}(0, 1)$,\n",
-        "- $PRO := f_{PRO}(SOD, SBP, U_{PRO}) := 0.40 \\cdot SOD + 0.30 \\cdot SBP + \\mathcal{N}(0, 1)$,"
+        "\n",
+        "\\begin{cases}\n",
+        "AGE := f_{AGE}(U_{AGE}) = \\mathcal{N}(65, 5) = 65 + \\sqrt{5}\\mathcal{N}(0, 1) \\\\\n",
+        "SOD := f_{SOD}(AGE, U_{SOD}) = I\\left[0.056 \\cdot AGE + \\mathcal{N}(0, 1)\\right] > 3.50 \\\\\n",
+        "SBP := f_{SBP}(AGE, SOD, U_{SBP}) = 1.05 \\cdot SOD + 2.00 \\cdot AGE + \\mathcal{N}(0, 1) \\\\\n",
+        "PRO := f_{PRO}(SOD, SBP, U_{PRO}) = 0.40 \\cdot SOD + 0.30 \\cdot SBP + \\mathcal{N}(0, 1)\n",
+        "\\end{cases}"
       ]
     },
     {
@@ -190,14 +193,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
         },
         "id": "FIa81Gzgtec6",
-        "outputId": "020fb98f-2fbc-4628-b8b6-fb64f177bdb3"
+        "outputId": "b034f888-bacc-41ea-987d-2e42bef28742"
       },
       "outputs": [
         {
@@ -216,7 +219,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-66242364-1c18-4ee6-8826-c961d98a957d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-70459345-c264-4fb9-93a9-4f3fd62654c2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -304,7 +307,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-66242364-1c18-4ee6-8826-c961d98a957d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-70459345-c264-4fb9-93a9-4f3fd62654c2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -356,12 +359,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-66242364-1c18-4ee6-8826-c961d98a957d button.colab-df-convert');\n",
+              "        document.querySelector('#df-70459345-c264-4fb9-93a9-4f3fd62654c2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-66242364-1c18-4ee6-8826-c961d98a957d');\n",
+              "        const element = document.querySelector('#df-70459345-c264-4fb9-93a9-4f3fd62654c2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -381,8 +384,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ec58a2c8-332d-4acc-9956-aca1c13a1f3c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ec58a2c8-332d-4acc-9956-aca1c13a1f3c')\"\n",
+              "<div id=\"df-e218fb05-6a04-42c5-a519-4e00aedefed6\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e218fb05-6a04-42c5-a519-4e00aedefed6')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -501,7 +504,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ec58a2c8-332d-4acc-9956-aca1c13a1f3c button');\n",
+              "        document.querySelector('#df-e218fb05-6a04-42c5-a519-4e00aedefed6 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -540,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "9Gw7m0iRtec7"
       },
@@ -575,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "FrsS2e0stec7"
       },
@@ -594,12 +597,20 @@
         "id": "wrYFRlLLtec8"
       },
       "source": [
-        "One might be tempted to translate this condition as $Pa(X), Y \\perp \\!\\!\\! \\perp_G \\textbf{Z}$, but it would be incomplete: following the definition of d-separation, X, Y and **Z** are required to be disjoint. Therefore,  **Z** alone would not be sufficient to block *every path between X and Y*, indeed the *direct* path between X and Y is still open. The correct translation is $Pa(X), Y \\perp \\!\\!\\! \\perp_G \\textbf{Z} \\cup \\{ X \\}$, where X itself blocks the direct path from X to Y, while **Z** blocks any *indirect* path from Pa(X) to Y."
+        "One might be tempted to translate this condition as:\n",
+        "$$\n",
+        "Pa(X) \\perp \\!\\!\\! \\perp_G Y~ | ~\\textbf{Z}\n",
+        "$$\n",
+        "but it would be incomplete: following the definition of d-separation, X, Y and **Z** are required to be disjoint. Therefore,  **Z** alone would not be sufficient to block *every path between X and Y*, indeed some *direct* path from X to Y is still open. The correct translation is:\n",
+        "$$\n",
+        "Pa(X) \\perp \\!\\!\\! \\perp_G Y~|~\\textbf{Z} \\cup \\{ X \\}\n",
+        "$$\n",
+        "where X itself blocks the direct path from X to Y, while **Z** blocks any *indirect* path from $Pa(X)$ to $Y$."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "MMOtNvUatec8"
       },
@@ -633,7 +644,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "8A9FCCUXtec8"
       },
@@ -653,14 +664,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
         "id": "r5WudysRtec9",
-        "outputId": "28b96060-550d-435b-af4e-c284c6092deb"
+        "outputId": "2c288504-5716-4feb-8afd-62ba5b201f07"
       },
       "outputs": [
         {
@@ -684,6 +695,41 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Indeed it exists a backdoor path between $X$ and $Y$, thus the empty set is not a valid adjustment set since it doesn't block this backdoor path:"
+      ],
+      "metadata": {
+        "id": "5IK_22GaiARS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "is_backdoor_adjustement_set(G, X = \"SOD\", Y = \"SBP\", Z = set())"
+      ],
+      "metadata": {
+        "id": "oGWmRHEgiINE",
+        "outputId": "045e7a48-77e3-418d-f125-170cff57bd04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "KvtY6Ngqtec9"
       },
@@ -693,14 +739,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
         "id": "GrWXNHYVtec9",
-        "outputId": "fd710f26-0232-432b-df50-839bc32408c9"
+        "outputId": "7da11ef1-f5db-4423-8f50-5ad40f69a890"
       },
       "outputs": [
         {
@@ -714,47 +760,12 @@
             }
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 12
         }
       ],
       "source": [
         "t = ACE(data, X = \"SOD\", Y = \"SBP\", Z = {\"AGE\", \"PRO\"})\n",
         "f\"Estimated ACE: {t:.3}, Relative Error: {(np.abs((t-ace)/ace*100)):.4}%\""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "yhVy-8Lwys9K"
-      },
-      "source": [
-        "Let's check if the empty set $Z=\\{\\}$  is a backdoor adjustment set:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PxTTKs3bt0ZB",
-        "outputId": "5ef0b144-c8d5-48b7-ccf3-a957a5cfc9da"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
-      ],
-      "source": [
-        "is_backdoor_adjustement_set(G, X = \"SOD\", Y = \"SBP\", Z = set())"
       ]
     },
     {
@@ -768,13 +779,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kvByhmQPtec9",
-        "outputId": "ff381fee-8cc8-467f-bd20-07dd1cf003de"
+        "outputId": "8cb6ecb1-e8fd-4cc2-ae79-b1cd310deef1"
       },
       "outputs": [
         {
@@ -803,13 +814,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OgfpK9hNtec-",
-        "outputId": "ecc0730c-385d-4fdd-f92d-cf428042dbb8"
+        "outputId": "91885de9-a57c-4aae-cebc-f118d1c32833"
       },
       "outputs": [
         {
@@ -833,19 +844,19 @@
         "id": "0DEFXYIxtec-"
       },
       "source": [
-        "The estimated ACE adjusting for AGE alone is:"
+        "Then, the right estimation of ACE is the one we obtain by adjusting for AGE alone:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
         "id": "deYLBXa2tec-",
-        "outputId": "93baba60-a29a-4b1f-fcd3-335192716d4e"
+        "outputId": "d2c90d6b-8db7-4a41-9794-c9df2a851652"
       },
       "outputs": [
         {
