Add `DAGitty` resource link

--- a/notebooks/structural_causal_models.ipynb
+++ b/notebooks/structural_causal_models.ipynb
@@ -708,11 +708,11 @@
         "is_backdoor_adjustement_set(G, X = \"SOD\", Y = \"SBP\", Z = set())"
       ],
       "metadata": {
-        "id": "oGWmRHEgiINE",
-        "outputId": "045e7a48-77e3-418d-f125-170cff57bd04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oGWmRHEgiINE",
+        "outputId": "045e7a48-77e3-418d-f125-170cff57bd04"
       },
       "execution_count": 11,
       "outputs": [
@@ -895,6 +895,24 @@
       "source": [
         "Applying a naive regression model without adjustment leads to an estimated ACE which is four times off. A regression model with an adjustment set reduce the relative error to 18%. Instead, using a **backdoor** adjustment set lowered it to 0.2%."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Additional material"
+      ],
+      "metadata": {
+        "id": "cdQC3qn-oTQW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If you want to enjoy your learning, get a look at [DAGitty](https://dagitty.net/dags.html)! It is an interesting web-based graphical tool that allows you to experiment with custom settings and familiarize with Causal Networks concepts."
+      ],
+      "metadata": {
+        "id": "JxxQqZYVnEuX"
+      }
     }
   ],
   "metadata": {
