--- a/notebooks/reachable.ipynb
+++ b/notebooks/reachable.ipynb
@@ -45,7 +45,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# An Implementaion of the Reachable Algorithm"
+        "# An Implementation of the Reachable Algorithm"
       ],
       "metadata": {
         "id": "65pjb3q1J2iv"
