--- a/notebooks/structural_causal_models.ipynb
+++ b/notebooks/structural_causal_models.ipynb
@@ -588,7 +588,7 @@
         "    # If X, Y, Z are not disjoint, then X and Y are d-separated by default\n",
         "    if X & Z or Y & Z:\n",
         "        return True\n",
-        "    return nx.d_separated(G, X, Y, Z)"
+        "    return nx.is_d_separator(G, X, Y, Z)"
       ]
     },
     {
