Fix deprecated function

--- a/notebooks/reachable.ipynb
+++ b/notebooks/reachable.ipynb
@@ -257,7 +257,7 @@
         "        for Y in  V - { X } - Z:\n",
         "            # Check if it is reachable and d-separated.\n",
         "            is_reachable = (Y in R)\n",
-        "            is_d_separated = nx.d_separated(G, { X }, { Y }, Z)\n",
+        "            is_d_separated = nx.is_d_separator(G, { X }, { Y }, Z)\n",
         "            # If it is reachable then it is not d-separated, and vice-versa.\n",
         "            assert is_reachable == (not is_d_separated)\n",
         "            # Log the execution.\n",
